fix background overlay on mobile menu

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <header class="header">
       <a href="#"
-        ><img src="assets/images/logo.svg" alt="logo" class="logo hide"
+        ><img src="assets/images/logo.svg" alt="logo" class="logo"
       /></a>
 
       <!-- Desktop Menu -->
@@ -79,7 +79,7 @@
       </nav>
     </header>
 
-    <main class="main hide">
+    <main class="main">
       <div class="grid-container">
         <picture class="items hero">
           <source
@@ -198,5 +198,6 @@
         </div>
       </div>
     </main>
+    <div class="overlay hide"></div>
   </body>
 </html>
